--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -5,54 +5,65 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <span class="navbar-text hide" lang="ca" xml:lang="ca">Part 1 Lliçó:</span>
-    <span class="navbar-text show" lang="en" xml:lang="en">Chapter 1 Lesson:</span>
+    <span class="navbar-text show" lang="en" xml:lang="en">Part 1 Lesson:</span>
     <span class="navbar-text hide" lang="es" xml:lang="es">Parte 1 Lección:</span>
-    <div class="navbar-nav" id="navbarChapter1">
+    <div class="navbar-nav" id="navbarPart1">
 
-      {% assign lessons = site.characters | group_by: "lesson" %}
+      {% assign lessons = site.kanji | where: "part","1"| group_by: "lesson" %}
 
       {% for lesson in lessons %}
 
-      <a class="nav-item nav-link" href="#Lesson{{ lesson.name }}">{{ lesson.name }}</a>
+      <a class="nav-item nav-link" href="#Part1Lesson{{ lesson.name }}">{{ lesson.name }}</a>
 
       {% endfor %}
 
-      <a class="nav-item nav-link" href="#Chapter1Lesson3">3</a>
-      <a class="nav-item nav-link" href="#Chapter1Lesson4">4</a>
-      <a class="nav-item nav-link" href="#Chapter1Lesson5">5</a>
-      <a class="nav-item nav-link" href="#Chapter1Lesson6">6</a>
-      <a class="nav-item nav-link" href="#Chapter1Lesson7">7</a>
-      <a class="nav-item nav-link" href="#Chapter1Lesson8">8</a>
-      <a class="nav-item nav-link" href="#Chapter1Lesson9">9</a>
-      <a class="nav-item nav-link" href="#Chapter1Lesson10">10</a>
-      <a class="nav-item nav-link" href="#Chapter1Lesson11">11</a>
+      <!-- this is temp -->
+      <a class="nav-item nav-link disabled" href="#Part1Lesson3">3</a>
+      <a class="nav-item nav-link disabled" href="#Part1Lesson4">4</a>
+      <a class="nav-item nav-link disabled" href="#Part1Lesson5">5</a>
+      <a class="nav-item nav-link disabled" href="#Part1Lesson6">6</a>
+      <a class="nav-item nav-link disabled" href="#Part1Lesson7">7</a>
+      <a class="nav-item nav-link disabled" href="#Part1Lesson8">8</a>
+      <a class="nav-item nav-link disabled" href="#Part1Lesson9">9</a>
+      <a class="nav-item nav-link disabled" href="#Part1Lesson10">10</a>
+      <a class="nav-item nav-link disabled" href="#Part1Lesson11">11</a>
+      <!-- :P -->
 
     </div>
     <span class="navbar-text hide" lang="ca" xml:lang="ca">Part 2 Lliçó:</span>
-    <span class="navbar-text show" lang="en" xml:lang="en">Chapter 2 Lesson:</span>
+    <span class="navbar-text show" lang="en" xml:lang="en">Part 2 Lesson:</span>
     <span class="navbar-text hide" lang="es" xml:lang="es">Parte 2 Lección:</span>
-    <div class="navbar-nav" id="navbarChapter2">
+    <div class="navbar-nav" id="navbarPart2">
 
-      <a class="nav-item nav-link" href="#Chapter2Lesson1">1</a>
-      <a class="nav-item nav-link" href="#Chapter2Lesson2">2</a>
-      <a class="nav-item nav-link" href="#Chapter2Lesson3">3</a>
-      <a class="nav-item nav-link" href="#Chapter2Lesson4">4</a>
-      <a class="nav-item nav-link" href="#Chapter2Lesson5">5</a>
-      <a class="nav-item nav-link" href="#Chapter2Lesson6">6</a>
-      <a class="nav-item nav-link" href="#Chapter2Lesson7">7</a>
-      <a class="nav-item nav-link" href="#Chapter2Lesson8">8</a>
-      <a class="nav-item nav-link" href="#Chapter2Lesson9">9</a>
-      <a class="nav-item nav-link" href="#Chapter2Lesson10">10</a>
-      <a class="nav-item nav-link" href="#Chapter2Lesson11">11</a>
-      <a class="nav-item nav-link" href="#Chapter2Lesson12">12</a>
-      <a class="nav-item nav-link disabled" href="#Chapter2Lesson13">13</a>
-      <a class="nav-item nav-link disabled" href="#Chapter2Lesson14">14</a>
-      <a class="nav-item nav-link disabled" href="#Chapter2Lesson15">15</a>
-      <a class="nav-item nav-link disabled" href="#Chapter2Lesson16">16</a>
-      <a class="nav-item nav-link disabled" href="#Chapter2Lesson17">17</a>
-      <a class="nav-item nav-link disabled" href="#Chapter2Lesson18">18</a>
-      <a class="nav-item nav-link disabled" href="#Chapter2Lesson19">19</a>
-      <a class="nav-item nav-link disabled" href="#Chapter2Lesson20">20</a>
+      {% assign lessons = site.kanji | where: "part","2"| group_by: "lesson" %}
+
+      {% for lesson in lessons %}
+
+      <a class="nav-item nav-link" href="#Part2Lesson{{ lesson.name }}">{{ lesson.name }}</a>
+
+      {% endfor %}
+
+      <!-- this is temp -->
+      <a class="nav-item nav-link disabled" href="#Part2Lesson2">2</a>
+      <a class="nav-item nav-link disabled" href="#Part2Lesson3">3</a>
+      <a class="nav-item nav-link disabled" href="#Part2Lesson4">4</a>
+      <a class="nav-item nav-link disabled" href="#Part2Lesson5">5</a>
+      <a class="nav-item nav-link disabled" href="#Part2Lesson6">6</a>
+      <a class="nav-item nav-link disabled" href="#Part2Lesson7">7</a>
+      <a class="nav-item nav-link disabled" href="#Part2Lesson8">8</a>
+      <a class="nav-item nav-link disabled" href="#Part2Lesson9">9</a>
+      <a class="nav-item nav-link disabled" href="#Part2Lesson10">10</a>
+      <a class="nav-item nav-link disabled" href="#Part2Lesson11">11</a>
+      <a class="nav-item nav-link disabled" href="#Part2Lesson12">12</a>
+      <a class="nav-item nav-link disabled" href="#Part2Lesson13">13</a>
+      <a class="nav-item nav-link disabled" href="#Part2Lesson14">14</a>
+      <a class="nav-item nav-link disabled" href="#Part2Lesson15">15</a>
+      <a class="nav-item nav-link disabled" href="#Part2Lesson16">16</a>
+      <a class="nav-item nav-link disabled" href="#Part2Lesson17">17</a>
+      <a class="nav-item nav-link disabled" href="#Part2Lesson18">18</a>
+      <a class="nav-item nav-link disabled" href="#Part2Lesson19">19</a>
+      <a class="nav-item nav-link disabled" href="#Part2Lesson20">20</a>
+      <!-- :P -->
 
     </div>
     <span class="navbar-text hide" lang="ca" xml:lang="ca">Idioma:</span>
