--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -17,6 +17,16 @@
 
       {% endfor %}
 
+      <!-- this is temp -->
+      <a class="nav-item nav-link disabled" href="#Part1Lesson6">5</a>
+      <a class="nav-item nav-link disabled" href="#Part1Lesson6">6</a>
+      <a class="nav-item nav-link disabled" href="#Part1Lesson7">7</a>
+      <a class="nav-item nav-link disabled" href="#Part1Lesson8">8</a>
+      <a class="nav-item nav-link disabled" href="#Part1Lesson9">9</a>
+      <a class="nav-item nav-link disabled" href="#Part1Lesson10">10</a>
+      <a class="nav-item nav-link disabled" href="#Part1Lesson11">11</a>
+      <!-- :P -->
+
     </div>
     <span class="navbar-text hide" lang="ca" xml:lang="ca">Part 2 Lliçó:</span>
     <span class="navbar-text show" lang="en" xml:lang="en">Part 2 Lesson:</span>
@@ -32,6 +42,13 @@
       {% endfor %}
 
       <!-- this is temp -->
+      <a class="nav-item nav-link disabled" href="#Part2Lesson6">6</a>
+      <a class="nav-item nav-link disabled" href="#Part2Lesson7">7</a>
+      <a class="nav-item nav-link disabled" href="#Part2Lesson8">8</a>
+      <a class="nav-item nav-link disabled" href="#Part2Lesson9">9</a>
+      <a class="nav-item nav-link disabled" href="#Part2Lesson10">10</a>
+      <a class="nav-item nav-link disabled" href="#Part2Lesson11">11</a>
+      <a class="nav-item nav-link disabled" href="#Part2Lesson12">12</a>
       <a class="nav-item nav-link disabled" href="#Part2Lesson13">13</a>
       <a class="nav-item nav-link disabled" href="#Part2Lesson14">14</a>
       <a class="nav-item nav-link disabled" href="#Part2Lesson15">15</a>
